--- a/config/storage.yml
+++ b/config/storage.yml
@@ -17,7 +17,7 @@ supabase:
   region: "eu-central-1"
   endpoint: <%= ENV['SUPABASE_END_POINT'] %>
   bucket: "uploaded_photos"
-  public: true
+  force_path_style: true
 
 # Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
