--- a/config/storage.yml
+++ b/config/storage.yml
@@ -18,6 +18,8 @@ supabase:
   endpoint: <%= ENV['SUPABASE_END_POINT'] %>
   bucket: "uploaded_photos"
   force_path_style: true
+  upload:
+    cache_control: "public, max-age=31536000, immutable"
 
 # Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
